add some adaptivity
)

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <label for="company-name">Company name</label>
                         <input name="company-name" id="company-name" type="text">
                     </div>
-                    <button class="second-part"> + Add logo</button>
+                    <button class="second-part" type="button"> + Add logo</button>
                 </div>
                 <div class="first-part">
                     <label for="email">Email</label>
